# rust-sctp

./: Cargo.toml  example.sh  readme.md
examples/: client.rs  echo-atraits.rs  echo.rs
src/: asyn.rs  lib.rs  sctp.rs  split.rs
