[package]
name = "sctp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_socketaddr = "0.2"
tokio = {version="1.38", features = [ "net", "io-util", "macros", "rt-multi-thread", "time", "sync" ]}
libc = "0.2"


[[example]]
name = "echo"

[[example]]
name = "client"
